Renamed the Code dx to Srm in the Resource and help folder